// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataResiliency /> dat-resilience-error-state-renders correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Data Resiliency
    </h2>
  </div>
  <div
    class="card-pf-body kubevirt-data-resiliency__dashboard-body"
  >
    <div
      class="kubevirt-data-resiliency__icon-error"
    >
      <span
        aria-hidden="true"
        class="fa fa-exclamation-triangle fa-5x"
      />
    </div>
    <div
      class="kubevirt-data-resiliency__status-title-error"
    >
      No data available
    </div>
  </div>
</div>
`;

exports[`<DataResiliency /> data-resiliency-build-renders-correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Data Resiliency
    </h2>
  </div>
  <div
    class="card-pf-body kubevirt-data-resiliency__dashboard-body"
  >
    <div
      class="kubevirt-data-resiliency__title"
    >
      Rebuilding data resiliency
    </div>
    <div
      class="kubevirt-data-resiliency__utilization-bar utilization-bar-pf"
    >
      <div>
        <span
          class="progress-label-top-right pull-right display-inline-block"
        >
          67%
        </span>
        <div
          class="progress-description label-text"
        >
          Rebuilding in Progress
        </div>
      </div>
      <div
        class="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="67"
          class="progress-bar"
          role="progressbar"
          style="width:67%"
        />
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="33"
          class="progress-bar progress-bar-remaining"
          role="progressbar"
          style="width:33%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataResiliency /> data-resiliency-resilient-status-renders-correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Data Resiliency
    </h2>
  </div>
  <div
    class="card-pf-body kubevirt-data-resiliency__dashboard-body"
  >
    <div
      class="kubevirt-data-resiliency__status-title-ok"
    >
      Your data is resilient
    </div>
    <div
      class="kubevirt-data-resiliency__icon-ok"
    >
      <span
        aria-hidden="true"
        class="fa fa-check-circle fa-5x"
      />
    </div>
  </div>
</div>
`;
